@@ -1,25 +1,0 @@
-; This file was generated by CMake (http://cmake.org)
-; Please see openjpeg/libopenjpeg/CMakeLists.txt and
-; openjpeg/libopenjpeg/openjpeg.def.in for more
-; information
-
-LIBRARY openjpeg.dll
-
-VERSION @OPENJPEG_MAJOR_VERSION@.@OPENJPEG_MINOR_VERSION@
-
-EXPORTS @UNDERSCORE@opj_image_create
-        @UNDERSCORE@opj_image_destroy
-        @UNDERSCORE@opj_cio_open
-        @UNDERSCORE@opj_cio_close
-        @UNDERSCORE@cio_tell
-        @UNDERSCORE@opj_set_event_mgr
-        @UNDERSCORE@opj_create_decompress
-        @UNDERSCORE@opj_destroy_decompress
-        @UNDERSCORE@opj_set_default_decoder_parameters
-        @UNDERSCORE@opj_setup_decoder
-        @UNDERSCORE@opj_decode
-        @UNDERSCORE@opj_create_compress
-        @UNDERSCORE@opj_destroy_compress
-        @UNDERSCORE@opj_set_default_encoder_parameters
-        @UNDERSCORE@opj_setup_encoder
-        @UNDERSCORE@opj_encode
